# SangamKeyboards2026

./: .gitignore  Readme.md
Android/: Readme-ExternalDisplays.md
Components/ContextAwareEditor/ContextAwareEditor/: ContentView.swift  ContextAwareEditorApp.swift  ContextAwareTextEditor.swift  IOSTextEditor.swift  LIBRARY_INTEGRATION_GUIDE.md  MacOSTextEditor.swift  MacOSTextEditorSimple.swift  SimpleContextAwareEditor.swift  TextEditorCore.swift  module.modulemap
Components/ContextAwareEditor/ContextAwareEditor.xcodeproj/: CROSS_PLATFORM_LIBRARY_INTEGRATION_GUIDE.md  project.pbxproj
Components/ContextAwareEditor/ContextAwareEditor.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Components/ContextAwareEditor/ContextAwareEditor/EditorSettings/: EditorSettings.swift  SettingsPresenter.swift  SettingsView.swift
Components/ContextAwareEditor/ContextAwareEditor/MurasuIMEngine/: PredictorManager.swift  PredictorWrapper.swift  ScriptConverterStructs.h  module.map  (+1 more)
Components/ContextAwareEditor/Scripts/: create_xcframework.sh
Components/ContextAwareTextView/ContextAwareTextView/: ContextAwareTextViewApp.swift
Components/ContextAwareTextView/ContextAwareTextView.xcodeproj/: project.pbxproj
Components/PredictionLib/: create_universal_lib.sh
Components/TextEditor/: Package.swift  Readme.md  Readme_project_structure.md  Readme_setup_guide.md  tree.txt
Docs/: Document1-ThemeArchitectureAndOverview.md  Document2-ThemeJsonSpecs.md  Document3-IOSThemeEditor.md  Document4-IOSThemeStoreAndBackEndAPI.md  Document5-AndroidThemeImplementation.md  Tamil-New-TN-TW-SampleText.txt
FontPacks/: SellinamAssets.fpk2  SellinamAssets.fpk2.1760851594585  SellinamAssets.fpk2.1760851682953  SellinamAssets.fpk2.1760852307411  SellinamAssets.fpk2.1760852323744  SellinamAssets.json
Libraries/: ProjectSetup.md
Libraries/KeyTanslatorLib/: AnjalKeyMap.c  CMakeLists.txt  ExamplesSwiftUIExampleContentView.swift  Package 2.swift  Package.swift  README.md  SourcesAnjalKeyTranslatorMultilingualKeyTranslator.swift  SourcesCAnjalKeyTranslatorincludemodule.modulemap  TestsAnjalKeyTranslatorTestsMultilingualKeyTranslatorTests.swift  convert_objc_to_c.py
Libraries/KeyTanslatorLib/include/: AnjalKeyMap.h  EncodingTamil.h  IndicIMEConstants.h  IndicNotesIMEngine.h  module.modulemap 
Libraries/KeyTanslatorLib/src/indic/: IndicDevanagariKeymap.c  IndicGurmukhiKeymap.c  IndicKannadaKeymap.c  IndicMalayalamKeymap.c  IndicNotesIMEngine.c  IndicTamilAnjalKeymap.c  IndicTeluguKeymap.c
Libraries/KeyTanslatorLib/src/tamil/: AnjalKeyMap.c  KeyTranslatorTamil.c
Libraries/KeyTanslatorLib/swift/Sources/AnjalKeyTranslator/: SangamKeyTranslator.swift  SwiftKeyTranslator.swift
Libraries/KeyTanslatorLib/swift/Sources/SangamKeyTranslator/: AnjalKeyTranslator.h  SangamKeyTranslator.swift
Libraries/KeyTanslatorLib/swift/Tests/AnjalKeyTranslatorTests/: AnjalKeyTranslatorTests.swift
Libraries/KeyTanslatorLib/xcode/: CMakeCache.txt  cmake_install.cmake
Libraries/KeyTanslatorLib/xcode/AnjalKeyTranslator.xcodeproj/: project.pbxproj
Libraries/KeyTanslatorLib/xcode/CMakeScripts/: ReRunCMake.make
iOS/: InputMethodDiscussion.md  README.md  Theme-Neon-Dreams.json  xml_to_json_converter_python.py
iOS/Assets/: Sangam-Icon.ai
iOS/References/: README-KeyboardLayout.md
iOS/SangamKeyboards/: README.md  tree.txt
iOS/SangamKeyboards/FontExtractor/: FontExracter.swift  main.swift
iOS/SangamKeyboards/KeyboardCore/: KeyboardCore.swift
iOS/SangamKeyboards/SangamKeyboards/: SangamKeyboards.entitlements
iOS/SangamKeyboards/SangamKeyboards.xcodeproj/: project.pbxproj
iOS/SangamKeyboards/SangamKeyboardsExtension/: KeyboardMetrics.swift  KeyboardViewController.swift  sample_theme_with_tamil_font.json
iOS/SangamKeyboards/SangamTamil99/: Info.plist  TamilKeyboardViewController.swift
iOS/SangamKeyboards/Tamil99/: Tamil99.entitlements  TamilKeyboardViewController.swift
iOS/SangamKeyboards/TamilAnjal/: Info.plist  TamilAnjalKeyboardViewController.swift
(+103 files in other folders)
